apps/base/media/unpackerr/unpackerr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unpackerr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://unpackerr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Unpackerr"
    gethomepage.dev/description: "Extractor for Arr downloads"
    gethomepage.dev/app: unpackerr
    gethomepage.dev/group: "Media"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`unpackerr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: unpackerr
          port: 5656
  tls: {}
